# ML_Life_Cycle

./: .gitignore  README.md
iris_model/: Dockerfile  README.md  app.py  iris_model.pkl  pyproject.toml  requirements.txt  test.py  train.py
mlflow-exp-track/: README.md  exp-tracking.ipynb  pyproject.toml
mlflow-exp-track/mlruns/0/: meta.yaml
mlflow-exp-track/mlruns/624374933172676639/: meta.yaml
mlflow-exp-track/mlruns/624374933172676639/2a18e340d468447db19dd70ab36fa1cc/: meta.yaml
mlflow-exp-track/mlruns/624374933172676639/2a18e340d468447db19dd70ab36fa1cc/metrics/: accuracy  f1_score_macro  log_loss
mlflow-exp-track/mlruns/624374933172676639/2a18e340d468447db19dd70ab36fa1cc/tags/: mlflow.source.name
mlflow-exp-track/mlruns/624374933172676639/99dba003306c43de8474b447e76f1b00/: meta.yaml
mlflow-exp-track/mlruns/624374933172676639/99dba003306c43de8474b447e76f1b00/metrics/: accuracy  f1_score_macro  log_loss
mlflow-exp-track/mlruns/624374933172676639/aa6b09040d8d4518905d4d8257af955e/: meta.yaml
mlflow-exp-track/mlruns/624374933172676639/aa6b09040d8d4518905d4d8257af955e/metrics/: accuracy  f1_score_macro  log_loss
mlflow-exp-track/mlruns/624374933172676639/models/m-0da7fabb6eae480790a90d9f17f54a55/: meta.yaml
mlflow-exp-track/mlruns/624374933172676639/models/m-177e2f9b99e146a59f17a73b7ffe5e36/: meta.yaml
mlflow-exp-track/mlruns/624374933172676639/models/m-571c6bf3bf15469992d02d04251da2c9/: meta.yaml
mlflow-exp-track/mlruns/models/IrisBestModel/: meta.yaml
mlflow-exp-track/mlruns/models/SecondBestIris/: meta.yaml
pytorch_model/: repro_l.ipynb
(+28 files in other folders)
