[project]
name = "iris-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "joblib>=1.5.1",
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "uvicorn>=0.35.0",
]
