[project]
name = "mlflow-exp-track"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "mlflow==3.2.0",
    "pandas==2.2.2",
    "pip>=25.2",
    "scikit-learn==1.6.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
